# SceneGraph

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
include/: cli.hpp  collada.hpp
source/: cli.cpp  collada.cpp  lib.cpp  main.cpp
test/: CMakeLists.txt
test/source/: model.test.cpp  scenegraph_test.cpp
